Creating a new scene with full copy sets rigidbody collision shapes to box. #38388

Closed
opened 2014-01-29 00:04:34 +01:00 by gandalf3 · 8 comments
Member

System Information
Archlinux
Nvidia GTX 460

Blender Version
Broken: 2.69.10 c7ac0ed and 2.69.9 a0f25f2
Worked: Blender 2.69 Release (r60991)

Short description of error
Collision shape settings are not transferred to the new scene.

Exact steps for others to reproduce the error

  1. Open blender
  2. Add a monkey
  3. Make it a rigidbody (the collision shape will default to convex-hull)
  4. Create a new scene with Full Copy
  5. The collision shape of the monkey in the new scene will be Box.
**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: 2.69.10 c7ac0ed and 2.69.9 a0f25f2 Worked: Blender 2.69 Release (r60991) **Short description of error** Collision shape settings are not transferred to the new scene. **Exact steps for others to reproduce the error** 1. Open blender 2. Add a monkey 3. Make it a rigidbody (the collision shape will default to convex-hull) 4. Create a new scene with *Full Copy* 5. The collision shape of the monkey in the new scene will be *Box*.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Author
Member

Creating a file in 2.69.10 and opening it in 2.69 also sets the Shape to box.

Creating a file in 2.69.10 and opening it in 2.69 also sets the *Shape* to box.
Sergej Reich self-assigned this 2014-01-29 12:46:41 +01:00

This issue was referenced by blender/blender-addons-contrib@f17a1bd58b

This issue was referenced by blender/blender-addons-contrib@f17a1bd58b302c9be0fb89f9c147523080789805

This issue was referenced by f17a1bd58b

This issue was referenced by f17a1bd58b302c9be0fb89f9c147523080789805

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f17a1bd58b.

Closed by commit f17a1bd58b.

Not sure about the "Creating a file in 2.69.10 and opening it in 2.69" case, can't reproduce here.

Not sure about the "Creating a file in 2.69.10 and opening it in 2.69" case, can't reproduce here.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38388
No description provided.