Fix T38388: Creating a new scene with full copy sets rigidbody collision shapes to box.

Tweak world rebuilding logic, so it's not done before object data was
updated.